[gd_scene load_steps=3 format=2]

[ext_resource path="res://animation/explosion.tres" type="SpriteFrames" id=1]
[ext_resource path="res://bullets/Bullet.gd" type="Script" id=2]

[node name="Bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="LifeTime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 1 )
speed_scale = 2.0

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
